--- a/task1-01.html
+++ b/task1-01.html
@@ -82,8 +82,8 @@
 	<div>
 		<h2>这里以后是个侧栏，这是侧栏标题</h2>
 		<h2>侧栏注册窗口标题</h2>
-		<form>
-			<p>请输入邮箱地址:<input type="text" value="这是一个文本框" ></input></p>
+		<form action="/" method="post">
+			<label>请输入邮箱地址:<input type="text" value="这是一个文本框" ></input></label>
 			<p>邮箱地址请按要求格式输入</p>
 			<p>请输入密码:<input type="text" value="这是一个文本框" ></input>请重复输入密码：<input type="text" value="这是一个文本框" ></input></p>
 			<p>密码为6-16位英文数字</p>
@@ -99,7 +99,7 @@
 			<input type="submit" value="确认提交"></input>
 			</p>
 		</form>
-		<p>版权所有C</p>
+		<p>版权所有ⓒsanmashu</p>
 	</div>
 </body>
 </html>
