--- a/task1-04.html
+++ b/task1-04.html
@@ -4,17 +4,11 @@
 	<title>任务四：定位和居中问题</title>
 	<meta charset="utf-8">
 	<style type="text/css">
-		.bg{
-			width: 800px;
-			height: 500px;
-			border:1px solid black;
-		}
-
 		.center{
 			height: 200px;
 			width: 400px;
 			background-color: #eee;
-			position: relative;
+			position: absolute;
 			left: 50%;
 			top: 50%;
 			margin-left: -200px;
